--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,16 @@
 <html>
+  <head>
+    <title>Pub/Sub Sample</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <script type="module" src="./javascripts/main.js"></script>
+  </head>
 
-<head>
-  <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
-
-<body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
-</body>
-
+  <body>
+    <h1>Pub/Sub Sample</h1>
+    <input id="subscribing" type="text" readonly />
+    <form id="publisher" onsubmit="window.onSubmit(event);">
+      <input id="publishing" type="text" />
+      <button type="submit">Publish</button>
+    </form>
+  </body>
 </html>
